--- a/src/components/experienceCard/ExperienceCard.css
+++ b/src/components/experienceCard/ExperienceCard.css
@@ -46,8 +46,7 @@
   margin-left: 0px;
   margin-right: 0px;
   text-align: right;
-  color: #35383c;
-  text-decoration: underline;
+  color: #868e96;
 }
 
 .experience-card-heading-left {
@@ -72,7 +71,7 @@
 .experience-card-description {
   margin-top: 5px;
   margin-left: 10px;
-  text-align: justify-content;
+  text-align: justify;
   margin-right: 20px;
   font-family: "Google Sans Regular";
 }
@@ -117,6 +116,7 @@
 
   .experience-card-logo {
     width: 100px;
+    height: 100px;
   }
 
   .experience-card-body-div {
@@ -159,5 +159,6 @@
   .experience-card-description {
     margin-left: 14px;
     margin-right: 14px;
-    text-align: justify;
+    text-align: center;
   }
+}
