--- a/src/components/githubRepoCard/GithubRepoCard.css
+++ b/src/components/githubRepoCard/GithubRepoCard.css
@@ -1,12 +1,16 @@
 .repo-card-div {
   color: rgb(88, 96, 105);
+  background-color: rgb(255, 255, 255);
   box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 30px -15px;
+  border-radius: 1%;
   padding: 2rem;
   cursor: pointer;
   flex: 1 1 25%;
+  transition: all 0.5s ease-in-out;
 }
 .repo-card-div:hover {
   box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px -10px;
+  background-color: rgb(59, 72, 255);
 }
 
 .repo-stats {
@@ -33,9 +37,14 @@
 
 .repo-left-stat span {
   display: flex;
-  -webkit-box-align: center;
+  justify-content: center;
   align-items: center;
+  -webkit-box-align: center;
   margin-right: 0.75rem;
+}
+
+.repo-left-stat span > * {
+  margin: 0.2rem;
 }
 
 .repo-name-div {
@@ -49,6 +58,8 @@
 }
 
 .repo-name {
+  white-space: nowrap;
+  text-overflow: ellipsis;
   text-align: left;
   color: rgb(36, 41, 46);
   font-family: "Google Sans Regular";
@@ -63,6 +74,7 @@
 
 .repo-star-svg {
   margin-right: 0.3rem;
+  margin-top: -1rem;
 }
 
 .repo-description {
@@ -93,17 +105,10 @@
   margin-right: 0px;
 }
 
-@media (max-width: 1200px) {
-  .repo-card-div {
-    flex: 1 1 40%;
-  }
-}
-
 @media (max-width: 768px) {
   .repo-card-div {
     flex: 1 1 100%;
   }
-
   .repo-name {
     font-size: 16px;
   }
@@ -118,5 +123,17 @@
 
   .repo-creation-date {
     font-size: 14px;
+  }
+}
+@media (max-width: 1200px) {
+  .repo-card-div {
+    flex: 1 1 40%;
+  }
+}
+
+@media (min-width: 768px) {
+  .repo-svg {
+    width: 20px;
+    height: 20px;
   }
 }
